Fixed played cards height on mobile landscape

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -433,7 +433,7 @@ body {
     .white-card__text, .black-card__text {
       font-size: 3.6vh; }
   .cards__item {
-    height: 39.6vh; } }
+    height: 39.6vh !important; } }
 
 @media screen and (min-width: 500px) and (min-height: 500px) {
   .home {
